syntax = "proto3";

package userservice;

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}


message CreateUserRequest {
  string username = 1;
  string fullName = 2;
  string email = 3;
  string passwordHash = 4;
}

message CreateUserResponse {
  string id = 1;
}


message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  string id = 1;
  string username = 2;
  string fullName = 3;
  string passwordHash = 4;
}
